optimize for small screens prevent searchbar from wraping and remove padding

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 }
 
 .main {
-  padding: 0 3rem;
   min-height: 100vh;
   margin: 0 auto;
   width: fit-content;
@@ -410,6 +409,7 @@ h1 {
   transition: background-color 0.5 ease-in-out;
   position: relative;
   text-align: center;
+  white-space: nowrap;
 }
 .search input {
   border: 0;
